ENG-3839 Edit Universe instance type field stretches over the whole width - fix
Summary: Fix instance type layout. Keep **Volume Info** to follow **Instance type** on window resize.

Test Plan: Open universe form select provider, resize browser window and make sure that instance type dependent fields follow instance type fiild

Reviewers: karthik, bogdan, ram

Reviewed By: ram

Subscribers: jenkins-bot, ui

Differential Revision: https://phabricator.dev.yugabyte.com/D5504

--- a/managed/ui/src/app/stylesheets/forms.scss
+++ b/managed/ui/src/app/stylesheets/forms.scss
@@ -174,7 +174,6 @@
     display: table-cell;
     text-align: left;
     min-width: 120px;
-    white-space: nowrap;
     padding: 11px 10px 0 0;
     vertical-align: top;
 
